@@ -23,13 +23,14 @@ all_by_module = {
     'werkzeug.local':       ['Local', 'LocalManager', 'LocalProxy'],
     'werkzeug.templates':   ['Template'],
     'werkzeug.serving':     ['run_simple'],
-    'werkzeug.test':        ['Client', 'EnvironBuilder', 'create_environ'],
+    'werkzeug.test':        ['Client', 'EnvironBuilder', 'create_environ',
+                             'run_wsgi_app'],
     'werkzeug.testapp':     ['test_app'],
     'werkzeug.exceptions':  ['abort', 'Aborter'],
     'werkzeug.utils':       ['escape', 'url_quote',
                              'environ_property', 'cookie_date', 'http_date',
                              'url_encode', 'url_quote_plus', 'url_fix',
-                             'run_wsgi_app', 'get_host', 'responder',
+                             'get_host', 'responder',
                              'SharedDataMiddleware', 'ClosingIterator',
                              'FileStorage', 'url_unquote_plus', 'url_decode',
                              'url_unquote', 'get_current_url', 'redirect',
